--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/mongoose": "^5.5.43",
     "@types/morgan": "^1.7.37",
@@ -24,6 +25,7 @@
   "dependencies": {
     "@types/multer": "^1.3.10",
     "@types/uuid": "^3.4.6",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.8.9",
     "morgan": "^1.9.1",
